part2/my_apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-iot
spec:
  rules:
    # Règles pour app1
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

    # Règles pour app2
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80

    # Règles pour app3
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80
---
# Backend par défaut
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-iot-default
spec:
  defaultBackend:
    service:
      name: app3
      port:
        number: 80
